# Bpp3dDataset

./: .gitignore  .gitlab-ci.yml  README.md  generate.sh  pyproject.toml  tox.ini
bpp3d_dataset/: __init__.py  main.py
bpp3d_dataset/ problem/: __init__.py  initiator.py  instance.py  problem.py  storage.py
bpp3d_dataset/data/: Discrete-1D.json  Discrete1D.json  DiscreteLong-1D.json  Normal-1D.json  Normal1D.json  NormalIntensive-1D.json  NormalLong-1D.json  OrGymBW0-1D.json  OrGymBW0C100-1D.json  OrGymBW1-1D.json  OrGymBW1C100-1D.json  OrGymLW0-1D.json  OrGymLW0C100-1D.json  OrGymLW1-1D.json  OrGymPP0-1D.json  OrGymPP0C100-1D.json  OrGymPP1-1D.json  Poisson-1D.json  PoissonIntensive-1D.json  PoissonLong-1D.json  Set1Set2-1D.json  Set1Set2Set3-1D.json  Set1Set3-1D.json  Uniform-1D.json  Uniform1D.json  UniformCoarse-1D.json  UniformIntensive-1D.json  UniformIntensive2-1D.json  UniformLargeItem-1D.json  UniformLong-1D.json  UniformMiddleItem-1D.json  UniformSmallItem-1D.json
bpp3d_dataset/data/PatternReductionTestInstances_1_1/: PR_00097.PRX  PR_00098.PRX  PR_00103.PRX  PR_00104.PRX  PR_00105.PRX  PR_00106.PRX  PR_00107.PRX  PR_00108.PRX  PR_00109.PRX  PR_00110.PRX  PR_00111.PRX  PR_00112.PRX  PR_00113.PRX  PR_00114.PRX  PR_00115.PRX  PR_00116.PRX  PR_00117.PRX  PR_00118.PRX  PR_00119.PRX  PR_00120.PRX  readme.txt
bpp3d_dataset/data/falkenauer/: binpack1.txt
bpp3d_dataset/data/schwerin/schwerin/: README
bpp3d_dataset/data/waescher/: README
bpp3d_dataset/problems/: __init__.py  bppinstance.py  extra_initiator.py  initiator.py  problem.py  registration.py  storage.py
bpp3d_dataset/test/: test_1dproblem.py
bpp3d_dataset/tests/: test_1dproblem.py  test_hello.py
bpp3d_dataset/utils/: problem_generation.py
bpp3d_dataset/utils/distribution/: discrete.py  distribution.py  periodic.py
bpp3d_dataset/utils/distributions/: __init__.py  discrete.py  distribution.py  periodic.py
tests/: test_1dproblem.py  test_distribution.py
