[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpp3d_dataset"
version = "0.0.1"
authors = [
    { name = "Zhang Huayan", email = "huayan.zhang@nottingham.edu.cn"}
]
description="3D BPP Dataset"
requires-python = ">=3.8"
keywords = [
"bin packing"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]


[tool.ruff]
line-length = 120

[tool.ruff.pydocstyle]
convention = "numpy"

# if you want to just import in __init__.py
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E402"]
[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "scipy"
]
ignore_missiong_imports = true
