[project]
name = "bpp3d_dataset"
version = "0.2.5"
authors = [
    { name = "Zhang Huayan", email = "huayan.zhang@nottingham.edu.cn"}
]
description="3D BPP Dataset"
requires-python = ">=3.8"
keywords = [
    "bin packing"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy"
]


[options]
zip_safe = true
include_package_data = true


[options.package_data]
bpp3d_dataset = "*.json"


[tool.setuptools.package-data]
bpp3d_dataset = ["*.json"]


[tool.ruff]
line-length = 120


[tool.ruff.pydocstyle]
convention = "numpy"

# if you want to just import in __init__.py
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E402"]
[tool.mypy]
exclude = [
    "tests/*"
]
warn_unused_configs = true


[[tool.mypy.overrides]]
module = [
    "scipy.*"
]
ignore_missing_imports = true

[tool.poetry]
name = "bpp3d_dataset"
version = "0.2.5"
description = ""
authors = ["Huayan Zhang <huayan.zhang@nottingham.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "1.24.4"
scipy = '^1.11.1'
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.275"
tox = "^4.6.4"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
